# NAO6-Research

./: README.md
cpp-reference-code/: CMakeLists.txt  main.cpp  qiproject.xml  readme.md
python-reference-code/: readme.md  tts.py
